--- a/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
@@ -466,6 +466,7 @@ span.summary-page__subhead_claim--br{
 }
 
 .br__modernize--diagram{
+    display: none;
     @include mq("tablet-wide"){
         display: none;
     }
