--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
@@ -90,7 +90,7 @@ $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 @mixin block__headline {             @include vr($font-size: 5,        $margin-top:1, $margin-bottom:1, $line-height:1.5); }
 @mixin block__list-head {            @include vr($font-size: 3,        $line-height:1.5, $margin-bottom: 1, $margin-top: 2); }
 @mixin block__list-item {            @include vr($font-size: 3,        $margin-bottom:0.75, $line-height:1.5); }
-@mixin block__subhead {              @include vr($font-size: 4,        $margin-top:1, $margin-bottom:1, $line-height:1.5); }
+@mixin block__subhead {              @include vr($font-size: 4,        $margin-top:2, $margin-bottom:0, $line-height:1.5); }
 
 @mixin body-text {                   @include vr($font-size: 14.5px,   $margin:1.5 0); }
 @mixin body-text-lg {                @include vr($font-size: 22.5px,   $line-height:2, $margin:1 0); }
@@ -122,7 +122,7 @@ $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 @mixin header__list-item {           @include vr($font-size: 2,     $margin-bottom:0.5, $line-height:1.5); }
 @mixin header__subhead {             @include vr($font-size: 5,        $margin:2 0); }
 @mixin header__subhead-lg {          @include vr($font-size: 5,        $margin:2 0); }
-@mixin header__subhead-sm {          @include vr($font-size: 3,        $margin:2 0, $line-height:2.4); }
+@mixin header__subhead-sm {          @include vr($font-size: 4,        $margin:2 0, $line-height:2.4); }
 @mixin headline-sm {                 @include vr($font-size: 4,        $margin:1 0); }
 
 @mixin item__deck {                  @include vr($font-size: 2,        $margin:2 0, $line-height:1.5); }
@@ -135,7 +135,8 @@ $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 @mixin diagram__header-headline {    @include vr($font-size: 4,        $margin-top:1, $margin-bottom:1, $line-height:1.5); }
 @mixin diagram__header-copy {        @include vr($font-size: 4,        $line-height:2, $margin:1 0); }
 @mixin diagram__item-headline {      @include vr($font-size: 4,        $margin-top:1, $margin-bottom:1, $line-height:1.5); }
-@mixin diagram__item-copy {          @include vr($font-size: 3,        $line-height:1.5);} 
+@mixin diagram__item-subhead  {      @include vr($font-size: 3,        $margin-top:0, $margin-bottom:.25, $line-height:1.5); }
+@mixin diagram__item-copy {          @include vr($font-size: 3,        $line-height:2, $margin-top: 1);} 
 
 @mixin legal {                       @include vr($font-size: 8px); }
 @mixin legal-lg {                    @include vr($font-size: 10px); }
