--- a/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
@@ -266,8 +266,212 @@ button{
 // ==========================================================================
 // links
 // ==========================================================================
+.link{
+  &__text{
+    @include link__text();
+    color: $primary;
+    font-weight: 400;
+    // text-transform: uppercase;
+    letter-spacing: .05em;
+    text-indent: -1em;
+    padding-left: 1em;
+    &--serif{
+      font-family: font-family-serif;
+    }
+    &--sans{
+      font-family: font-family-sans-serif;
+    }
+  }
+  &__image{}
+  &--hybrid{
+display: flex;
+flex: 0 0 auto;
+width: 70.5%;
+align-self: flex-start;
+  }
+}
 
-// .link__chevron{
+.comment{
+  @include comment();
+&__leader{
+  
+}
+}
+
+.link.link--hybrid{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.button-image{
+    
+    &__chev{
+        z-index: 3;
+        width: 1em;
+        height: 1em;
+    
+    &--up{
+        path.st0{
+            stroke-width: 1em;
+        }   
+    }
+    &--down{
+        path.st0{
+            stroke-width: 1em;
+        }   
+    }
+    &--right{
+        path{
+            stroke-width: 1em;
+        }   
+    }
+    &--left{
+      path{
+          stroke-width: 1em;
+      }   
+  }
+}
+}
+
+
+
+
+//* EXPAND/JUMP/TOP BUTTONS
+
+.ui-button{
+height: 2em;
+width: 2em;
+border-radius: 100%;
+min-height: 2em;
+display: flex;
+align-items: center;
+justify-content: center;
+
+&__jump{ //chev-dwn
+        &--primary-white{
+            background: $primary;
+            path.st0{
+                stroke: $white;
+            }
+        }   
+
+        &--white-primary{
+            background: $white;
+            border: 1px solid $primary;
+            path.st0{
+                stroke: $primary;
+            }
+            }    
+        }
+&__expand{  //chev-right
+  @include vr($margin:0 0 2 0);  
+  &--white-primary{
+        background: $white;
+        border: 1px solid $primary;
+        path{
+            stroke: $primary;
+        }   
+        }
+    
+        &--primary-white{
+        background: $primary;
+        path{
+            stroke: $white;
+            }
+        }          
+    }
+
+    &__contract{  //chev-right
+      @include vr($margin:2 0);  
+      &--white-primary{
+          background: $white;
+          border: 1px solid $primary;
+          path{
+              stroke: $primary;
+          }   
+          }
+      
+          &--primary-white{
+          background: $primary;
+          path{
+              stroke: $white;
+              }
+          }          
+      }
+
+&__top{  //chev-up
+    &--white-primary{
+        background: $white;
+        border: 1px solid $primary;
+        path{
+            stroke: $primary;
+        }   
+        }   
+    }
+}
+
+.expand-button{
+  &__expertise{
+      align-self: flex-start;
+      margin-left: 8%;
+//       @include vr($margin-top: 2);
+      }
+      &--webdev{
+}
+}
+
+.link:hover {
+    color: $link-hover-color;
+    text-decoration: $link-hover-decoration;
+  }
+#link__advance_chev-dwn{
+    width:1.5em;
+   height:1.5em;
+   display: block;
+   @include push-auto();
+     
+ }
+
+ a.link {
+    &.link__chevron {
+      height: 3rem;
+      width: 3rem;
+      border-radius: .75em;
+      display: flex;
+      align-items: center;
+      min-height: 0;
+    }
+  
+    &.link__text {
+     flex: 1 0 auto;
+    
+    &--white{
+      color: $white;
+    }
+    &--primary{
+      color: $primary;
+    }
+    &--intro{
+    margin: 0 auto;
+    }
+    &--center{
+      margin-left: auto;
+      margin-right: auto;
+      }
+      &--selfcenter{
+        align-self: center;
+        }
+      &--martop{
+        @include vr($margin-top: 2);
+      }
+      &--marbottom{
+        @include vr($margin-bottom: 2);
+      }
+  }
+  }
+
+
+ // .link__chevron{
 //     width: 3rem;
 //     height: 3rem;
 //     display: block;
@@ -282,8 +486,131 @@ left: 0;
 }
 
 
+.link {
+    &__chevron {
+      &--splash {
+      }
+    }
+  }
+  .link-chevron {
+    &--splash-services {
+  @media (min-width: 48em) and (max-width: 64em){
+    transform: translateY(-14em);
+  }
+  
+    }
+    }
+    .link__chevron--splash {
+        flex: 0 0 auto;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: 0;
+        margin-right: 0;
+        display: flex;
+      
+        // position: absolute;
+        // flex: 0 0 0;
+        // left: 50%;
+        // bottom: 6em;
+      }
 
 
+    .link--item-expertise {
+        flex: 0 0 0;
+      }
+
+      .link.link-chevron--splash-services {
+        @include mq("tablet-wide") {
+          background: $white;
+      
+          >#link__advance_chev-dwn>g>path {
+            stroke: $primary;
+          }
+        }
+      }
+
+      .link.homepage-intro__link_advance--chevron {
+        @include vr($padding-bottom: 4);
+      
+        margin: 0 auto;
+      }
+
+
+      .link.homepage-summary__claim_link {
+        position: absolute;
+        z-index: 3;
+        bottom: 2em;
+        align-self: center;
+        margin: unset;
+      }
+
+
+      @include mq("tablet-wide", $type: max) {
+        .link {
+          @include vr($margin: 3 0 2 0);
+        }
+      }
+
+
+      .skills {
+        .link__chevron {
+          position: relative;
+        }
+      }
+
+      .link.services__services-to-capabilities_link {
+        flex: 0 0 auto;
+        width: 100%;
+        max-width: 100%;
+      }
+
+      a.link.services__services-to-capabilities_link {
+        @include make-col-ready;
+        @include make-col(12);
+    
+        padding-left: 0px;
+        padding-right: 0px;
+    
+        @include vr($margin: 1 0 0 1);
+      }
+      .link.container--splash-homepage_advance-link {
+        position: absolute;
+        bottom: 4em;
+        align-self: center;
+      
+        svg.chev--dwn {
+          margin: 0 auto;
+        }
+      }
+
+      .link.link__chevron--splash{
+        background: $primary;
+        border-radius: 100%;
+        z-index: 3;
+      }
+       
+       
+       
+       
+       > #link__advance_chev-dwn > g > path{
+         stroke: $white;
+       
+       }
+
+       .container--splash-homepage_advance-link{
+        position: absolute;
+        display: block;
+        @include push-auto;
+        bottom: 6em;
+      }
+
+      
+#capabilities__menu_link {
+    @include body-text();
+  
+    font-style: italic;
+    Color: $primary;
+  }
 // ==========================================================================
 // scroll top
 // ==========================================================================
@@ -318,3 +645,37 @@ left: 0;
   padding-left: 0;
   padding-right: 0;
 }
+
+.hr{
+&__title-headline{
+min-height: 3rem;
+width: 100%;
+flex: 0 0 auto;
+  &::after{
+  top: 25%;
+  height: .25em;
+  background: $primary;
+}
+}
+&__expertise-divider{
+  min-height:6rem;
+  width: 83%;
+  flex: 0 0 auto;
+    &::after{
+    top: 50%;
+    height: .25em;
+    background: $primary;
+  } 
+}
+}
+
+.masthead{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+width: 100%;
+max-width: 100%;
+min-height: 0;
+@include vr($margin-bottom: 6);
+}
+
